# openaiagentssdk-tutorial-unicorndevelopers

./: .gitignore
openaiagentssdktutorial/: pyproject.toml
openaiagentssdktutorial/openaiagentssdk/00AgenticAIApplications/: README.MD
openaiagentssdktutorial/openaiagentssdk/01Helloworld/: README.md  helloworld.py
openaiagentssdktutorial/openaiagentssdk/02BasicConfig/: README.md  basicconfig.py
openaiagentssdktutorial/openaiagentssdk/02DetailAgent/: README.md  detailagent.py
openaiagentssdktutorial/openaiagentssdk/04geminiconfig/: README.md
openaiagentssdktutorial/openaiagentssdk/05BasicContext/: README.md  basiccontext.py  openaicontext.py
openaiagentssdktutorial/openaiagentssdk/06BasicOutput/: README.md  basicoutput.py
openaiagentssdktutorial/openaiagentssdk/07BasicHandsoff/: README.md  basichandsoff.py
openaiagentssdktutorial/openaiagentssdk/08BasicDynamicInstructions/: README.md  basicdynamicinstructions.py
openaiagentssdktutorial/openaiagentssdk/09BasicCloning/: README.md  basiccloning.py
openaiagentssdktutorial/openaiagentssdk/10Running/: README.md  running.py
openaiagentssdktutorial/openaiagentssdk/11StreamingRawResponse/: README.md  streamingrawresponse.py
openaiagentssdktutorial/openaiagentssdk/12HostedTools/: README.md  hostedtools.py
openaiagentssdktutorial/openaiagentssdk/12RunItemAndAgentsEvents/: README.md  runitemandagentsevents.py
openaiagentssdktutorial/openaiagentssdk/13FunctionTools/: README.md  functiontools.py
openaiagentssdktutorial/openaiagentssdk/14CustomFunctionTools/: README.md  customfunctiontools.py
(+146 files in other folders)
